--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,32 @@
 asgiref==3.8.1
+cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
 Django==5.1.3
 djangorestframework==3.15.2
+google-api-core==2.24.0
+google-api-python-client==2.155.0
+google-auth==2.37.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
+googleapis-common-protos==1.66.0
+gspread==6.1.4
+httplib2==0.22.0
+idna==3.10
+oauth2client==4.1.3
+oauthlib==3.2.2
+proto-plus==1.25.0
+protobuf==5.29.1
+psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pyparsing==3.2.0
+requests==2.32.3
+requests-oauthlib==2.0.0
+rsa==4.9
+six==1.17.0
 sqlparse==0.5.2
 typing_extensions==4.12.2
 tzdata==2024.2
+uritemplate==4.1.1
+urllib3==2.2.3
