--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
 asgiref==3.8.1
+attrs==24.2.0
+autobahn==24.4.2
+Automat==24.8.1
 cachetools==5.5.0
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.4.0
+constantly==23.10.4
+cryptography==44.0.0
 Django==5.1.3
 djangorestframework==3.15.2
 google-api-core==2.24.0
@@ -11,22 +17,34 @@ google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.1
 googleapis-common-protos==1.66.0
 gspread==6.1.4
+gunicorn==23.0.0
 httplib2==0.22.0
+hyperlink==21.0.0
 idna==3.10
+incremental==24.7.2
 oauth2client==4.1.3
 oauthlib==3.2.2
+packaging==24.2
 proto-plus==1.25.0
 protobuf==5.29.1
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
+pycparser==2.22
+pyOpenSSL==24.3.0
 pyparsing==3.2.0
 requests==2.32.3
 requests-oauthlib==2.0.0
 rsa==4.9
+service-identity==24.2.0
 six==1.17.0
 sqlparse==0.5.2
+tomli==2.2.1
+Twisted==24.11.0
+txaio==23.1.1
 typing_extensions==4.12.2
 tzdata==2024.2
 uritemplate==4.1.1
 urllib3==2.2.3
+waitress==3.0.2
+zope.interface==7.2
